[package]
name = "hltas-framebulk-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hltas = "0.5.0"
thiserror = "1.0.30"
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
ansi_term = "0.12.1"
