[package]
name = "hltas-framebulk-analyzer"
version = "1.0.0"
authors = ["yuu0141 <eddio0141@gmail.com>"]
edition = "2021"
description = "Analyser of HLTAS files"
license = "MIT OR Apache-2.0"
keywords = ["hltas", "analyzer", "framebulk", "TAS", "tool assisted speedrun"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hltas = "0.5.0"
thiserror = "1.0.30"
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
ansi_term = "0.12.1"
num-bigint = "0.4.3"
